<resources>
    <string name="app_name">NeRecipe</string>
    <string name="search">Search</string>
    <string name="add_recipe">Add</string>
    <string name="my_favorite">Favorite</string>
    <string name="title">Title</string>
    <string name="author_name">Author name</string>
    <string name="steps_of_recipe">Steps of recipe</string>
    <string name="category">Category</string>
    <string name="feed">Feed</string>
    <string name="filter">Filter</string>
    <string name="european">European</string>
    <string name="asian">Asian</string>
    <string name="panasian">Panasian</string>
    <string name="eastern">Eastern</string>
    <string name="american">American</string>
    <string name="russian">Russian</string>
    <string name="mediterranean">Mediterranean</string>
    <string name="filters">Filters</string>
    <string name="cancel_filter">Cancel filter</string>
</resources>