<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/top_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        style="@style/Widget.MaterialComponents.Toolbar.Primary"
        app:title="@string/app_name"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/filters_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/top_bar"
        android:text="@string/filters"
        android:textSize="24sp"
        android:layout_marginStart="16dp"
        />

    <CheckBox
        android:id="@+id/checkBoxEuropean"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/european"
        app:layout_constraintStart_toStartOf="@id/filters_textview"
        app:layout_constraintTop_toBottomOf="@id/filters_textview"
        android:checked="true"
        />

    <CheckBox
        android:id="@+id/checkBoxAsian"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/asian"
        app:layout_constraintStart_toStartOf="@id/filters_textview"
        app:layout_constraintTop_toBottomOf="@id/checkBoxEuropean"
        android:checked="true"
        />

    <CheckBox
        android:id="@+id/checkBoxPanasian"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/panasian"
        app:layout_constraintStart_toStartOf="@id/filters_textview"
        app:layout_constraintTop_toBottomOf="@id/checkBoxAsian"
        android:checked="true"
        />

    <CheckBox
        android:id="@+id/checkBoxEastern"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/eastern"
        app:layout_constraintStart_toStartOf="@id/filters_textview"
        app:layout_constraintTop_toBottomOf="@id/checkBoxPanasian"
        android:checked="true"
        />

    <CheckBox
        android:id="@+id/checkBoxAmerican"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/american"
        app:layout_constraintStart_toStartOf="@id/filters_textview"
        app:layout_constraintTop_toBottomOf="@id/checkBoxEastern"
        android:checked="true"
        />

    <CheckBox
        android:id="@+id/checkBoxRussian"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/russian"
        app:layout_constraintStart_toStartOf="@id/filters_textview"
        app:layout_constraintTop_toBottomOf="@id/checkBoxAmerican"
        android:checked="true"
        />
    <CheckBox
        android:id="@+id/checkBoxMediterranean"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mediterranean"
        app:layout_constraintStart_toStartOf="@id/filters_textview"
        app:layout_constraintTop_toBottomOf="@id/checkBoxRussian"
        android:checked="true"
        />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/accept_filters_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp"
        android:src="@drawable/ic_fab_check_48dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>