<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewRecipeFragment.FeedFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/top_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        style="@style/Widget.MaterialComponents.Toolbar.Primary"
        app:title="@string/app_name"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/favorite_recipes_RecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/top_bar"
        app:layout_constraintBottom_toTopOf="@id/favorite_bottom_barrier"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>

    <ImageView
        android:id="@+id/favorite_footer_imageview"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@android:color/transparent"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/favorite_addrecipe_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="@id/favorite_footer_imageview"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/add_recipe"
        app:layout_constraintStart_toEndOf="@id/favorite_feed_button"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        app:icon="@drawable/ic_add_24dp"
        android:background="@android:color/transparent"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/favorite_favoriterecipe_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="@id/favorite_footer_imageview"
        app:layout_constraintEnd_toStartOf="@id/favorite_feed_button"
        android:text="@string/my_favorite"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        app:icon="@drawable/ic_favorite_list_24dp"
        android:background="@android:color/transparent"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/favorite_feed_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="@id/favorite_footer_imageview"
        app:layout_constraintEnd_toStartOf="@id/favorite_addrecipe_button"
        app:layout_constraintStart_toEndOf="@id/favorite_favoriterecipe_button"
        android:text="@string/feed"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        app:icon="@drawable/ic_feed_24dp"
        android:background="@android:color/transparent"
        />


    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/favorite_bottom_barrier"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:constraint_referenced_ids="favorite_footer_imageview, favorite_addrecipe_button, favorite_favoriterecipe_button"
        app:barrierDirection="top"
        />

</androidx.constraintlayout.widget.ConstraintLayout>